# ask

./: Dockerfile  app.py  deployment.yaml  pyproject.toml
.github/: dependabot.yml
.github/actions/image/: action.yml
.github/workflows/: deploy.yml
templates/: base.html  index.html
