[project]
name = "ask"
version = "0.1.0"
description = ""
authors = [
    {name = "Steven de jong ðŸŸ",email = "steven@steven-dejong.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask (>=3.1.1,<4.0.0)",
    "openai (>=1.93.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"